--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "tsx server/index.ts",
     "build": "vite build",
+    "start": "tsx server/index.ts",
     "preview": "cd client && npm run preview"
   },
   "dependencies": {
